<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name" translatable="false">Share Thoughts</string>
    <string name="hello_world" translatable="false">Welcome to Share Thoughts!</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="text_1" translatable="false">Text 1</string>
    <string name="text_2" translatable="false">Text 2</string>
    <string name="text_3" translatable="false">Text 3</string>
    <string name="text_4" translatable="false">Text 4</string>
    <string name="text_5" translatable="false">Text 5</string>
    <string name="text_6" translatable="false">Text 6</string>
    <string name="text_7" translatable="false">Text 7</string>
    <string name="text_8" translatable="false">Text 8</string>
    <string name="text_9" translatable="false">Text 9</string>
    <string name="text_10" translatable="false">Text 10</string>
    <string name="title_activity_content" translatable="false">ContentActivity</string>
    <string name="add_thought" translatable="false">Add Thought</string>
    <string name="about" translatable="false">About</string>
    <string name="aboutst" translatable="false">Share Thoughts provides the way to connect with people anonymously, express yourself and discover shared thoughts. 
        If you have any ideas or thoughts to share anonymously, then you are at right place.
        You can also visit <a href="http://www.share-thoughts.com">http://www.share-thoughts.com</a></string>
    <string name="title_activity_add" translatable="false">AddActivity</string>
    <string name="title_activity_about" translatable="false">AboutActivity</string>
    <string name="about_share_thoughts" translatable="false">About Share Thoughts</string>
    <string name="title" translatable="false">TITLE</string>
    <string name="enter_title_here" translatable="false">Enter Title Here</string>
    <string name="content" translatable="false">CONTENT</string>
    <string name="enter_content_here" translatable="false">Enter Content Here</string>
    <string name="submit" translatable="false">Submit</string>
    <string name="detail" translatable="false">detail</string>

</resources>
