<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >
	<RelativeLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:paddingBottom="@dimen/activity_vertical_margin"
	    android:paddingLeft="@dimen/activity_horizontal_margin"
	    android:paddingRight="@dimen/activity_horizontal_margin"
	    android:paddingTop="@dimen/activity_vertical_margin"
	    android:background="@drawable/url"
	    tools:context="com.example.jobs.LoginActivity" >

		<TextView
		    android:id="@+id/textView1"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_alignLeft="@+id/title_edttxt"
		    android:text="@string/title"
		    android:textColor="#FFEFD5" />

		<EditText
		    android:id="@+id/title_edttxt"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_below="@+id/textView1"
		    android:layout_centerHorizontal="true"
		    android:layout_marginTop="18dp"
		    android:ems="10"
		    android:hint="@string/enter_title_here"
		    android:textColor="#FFEFD5">
		    <requestFocus />
		</EditText>

		<TextView
		    android:id="@+id/textView2"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_alignLeft="@+id/title_edttxt"
		    android:layout_below="@+id/title_edttxt"
		    android:layout_marginTop="24dp"
		    android:text="@string/content"
		    android:textColor="#FFEFD5" />

		<EditText
		    android:id="@+id/editText2"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_alignLeft="@+id/textView2"
		    android:layout_below="@+id/textView2"
		    android:layout_marginTop="32dp"
		    android:ems="10"
		    android:hint="@string/enter_content_here"
		    android:inputType="textMultiLine"
		    android:textColor="#FFEFD5" >
		</EditText>

		<Button
		    android:id="@+id/button1"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_below="@+id/editText2"
		    android:layout_marginTop="69dp"
		    android:layout_toRightOf="@+id/textView1"
		    android:text="@string/submit"
		    android:textColor="#FFEFD5" />

	</RelativeLayout>
</ScrollView>
